added users table

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tu-11-1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,9 +15,21 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZekeSalvato/grace-shopper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ZekeSalvato/grace-shopper/issues"
+  },
+  "homepage": "https://github.com/ZekeSalvato/grace-shopper#readme",
+  "description": ""
 }
