--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "build": "react-scripts build",
     "webpack": "webpack"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.16",
+    "@mui/system": "^5.10.16",
     "bcrypt": "^5.1.0",
     "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
