fixed incorrect table order, added reviews table to drop tables, removed invalid characters from create products in seed, changed some scripts to accomodate for server deployment

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "nodemon index.js",
+    "seed": "node ./db/seed.js",
     "seed:dev": "nodemon ./db/seed.js",
-    "start": "react-scripts start",
+    "start:dev": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "webpack": "webpack"
   },
