--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.16",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.17",
     "@mui/system": "^5.10.16",
     "bcrypt": "^5.1.0",
     "browserify-zlib": "^0.2.0",
