--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/system": "^5.10.16",
     "bcrypt": "^5.1.0",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "cli": "^1.0.1",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
